Fix compilation errors in NullableConcurrentMap and NullableSortedMap
[git-p4: depot-paths = "//dev/coherence-ce/release/coherence-ce-v22.06/": change = 107808]