@@ -713,7 +713,7 @@ public class NullableSortedMap<K, V>
 
         public <T> T[] toArray(T[] a)
             {
-            return f_setEntries.stream().map(NullableEntry::new).toList().toArray(a);
+            return f_setEntries.stream().map(NullableEntry::new).collect(Collectors.toList()).toArray(a);
             }
 
         public boolean add(Entry<K, V> entry)
@@ -1049,7 +1049,7 @@ public class NullableSortedMap<K, V>
 
         public <T> T[] toArray(T[] a)
             {
-            return f_col.stream().map(k -> Nullable.get(k)).toList().toArray(a);
+            return f_col.stream().map(k -> Nullable.get(k)).collect(Collectors.toList()).toArray(a);
             }
 
         public boolean add(T key)
@@ -1064,7 +1064,7 @@ public class NullableSortedMap<K, V>
 
         public boolean containsAll(Collection<?> c)
             {
-            return f_col.containsAll(c.stream().map(Nullable::of).toList());
+            return f_col.containsAll(c.stream().map(Nullable::of).collect(Collectors.toList()));
             }
 
         public boolean addAll(Collection<? extends T> c)
@@ -1076,12 +1076,12 @@ public class NullableSortedMap<K, V>
 
         public boolean retainAll(Collection<?> c)
             {
-            return f_col.retainAll(c.stream().map(Nullable::of).toList());
+            return f_col.retainAll(c.stream().map(Nullable::of).collect(Collectors.toList()));
             }
 
         public boolean removeAll(Collection<?> c)
             {
-            return f_col.removeAll(c.stream().map(Nullable::of).toList());
+            return f_col.removeAll(c.stream().map(Nullable::of).collect(Collectors.toList()));
             }
 
         public void clear()
@@ -1102,7 +1102,7 @@ public class NullableSortedMap<K, V>
                 return false;
                 }
             Collection<?> that = (Collection<?>) o;
-            return Objects.equals(f_col, that.stream().map(Nullable::of).toList());
+            return Objects.equals(f_col, that.stream().map(Nullable::of).collect(Collectors.toList()));
             }
 
         public int hashCode()
